--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 FLASK_ENV=development
-MY_SECRET=test
 
+PROTOCOL=mysql+mysqlconnector
 DB_USER=
 DB_PASSWORD=
-DB_HOST=
-DB_NAME=
+DB_HOST=localhost
+DB_NAME=resume_app
